// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0 selected transactions 1`] = `
<DocumentFragment>
  <div
    class="w-100 my-3 text-center"
  >
    <h3
      class="font-weight-bold"
    >
      Merkle Tree Visualization
    </h3>
    <p
      class="my-3 border w-75 mx-auto"
    >
      Please select a verified transaction from above...
    </p>
  </div>
</DocumentFragment>
`;

exports[`1 selected transactions 1`] = `
<DocumentFragment>
  <div
    class="w-100 my-3 text-center"
  >
    <h3
      class="font-weight-bold"
    >
      Merkle Tree Visualization
    </h3>
    <div
      class="table-responsive"
    >
      <table
        aria-label="Preview Table"
        class="w-75 mx-auto my-1 text-center border table table-sm"
        role="grid"
      >
        <tbody
          role="presentation"
        >
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="root-cell"
              title="AB1.23"
            >
              AB1.23
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`2 selected transactions 1`] = `
<DocumentFragment>
  <div
    class="w-100 my-3 text-center"
  >
    <h3
      class="font-weight-bold"
    >
      Merkle Tree Visualization
    </h3>
    <div
      class="table-responsive"
    >
      <table
        aria-label="Preview Table"
        class="w-75 mx-auto my-1 text-center border table table-sm"
        role="grid"
      >
        <tbody
          role="presentation"
        >
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="root-cell"
              title="random message"
            >
              random message
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
          <tr>
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class="diag-line-left"
            />
            <td
              class=""
            />
            <td
              class="diag-line-right"
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
          </tr>
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="data-cells"
              title="AB1.23"
            >
              AB1.23
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="data-cells"
              title="AC456.78"
            >
              AC456.78
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`3 selected transactions 1`] = `
<DocumentFragment>
  <div
    class="w-100 my-3 text-center"
  >
    <h3
      class="font-weight-bold"
    >
      Merkle Tree Visualization
    </h3>
    <div
      class="table-responsive"
    >
      <table
        aria-label="Preview Table"
        class="w-75 mx-auto my-1 text-center border table table-sm"
        role="grid"
      >
        <tbody
          role="presentation"
        >
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="root-cell"
              title="random message"
            >
              random message
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
          <tr>
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class="diag-line-left"
            />
            <td
              class=""
            />
            <td
              class="diag-line-right"
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
          </tr>
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="middle-cells"
              title="random message"
            >
              random message
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="middle-cells"
              title="AD999.99"
            >
              AD999.99
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
          <tr>
            <td
              class=""
            />
            <td
              class="diag-line-left"
            />
            <td
              class="normal-line"
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class="normal-line"
            />
            <td
              class=""
            />
            <td
              class=""
            />
          </tr>
          <tr>
            <td
              class="data-cells"
              title="AB1.23"
            >
              AB1.23
            </td>
            <td
              class=""
              title=""
            />
            <td
              class="data-cells"
              title="AC456.78"
            >
              AC456.78
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="data-cells"
              title="AD999.99"
            >
              AD999.99
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`4 selected transactions 1`] = `
<DocumentFragment>
  <div
    class="w-100 my-3 text-center"
  >
    <h3
      class="font-weight-bold"
    >
      Merkle Tree Visualization
    </h3>
    <div
      class="table-responsive"
    >
      <table
        aria-label="Preview Table"
        class="w-75 mx-auto my-1 text-center border table table-sm"
        role="grid"
      >
        <tbody
          role="presentation"
        >
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="root-cell"
              title="random message"
            >
              random message
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
          <tr>
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class="diag-line-left"
            />
            <td
              class=""
            />
            <td
              class="diag-line-right"
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
          </tr>
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="middle-cells"
              title="random message"
            >
              random message
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="middle-cells"
              title="random message"
            >
              random message
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
          <tr>
            <td
              class=""
            />
            <td
              class="diag-line-left"
            />
            <td
              class="normal-line"
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class=""
            />
            <td
              class="normal-line"
            />
            <td
              class="diag-line-right"
            />
            <td
              class=""
            />
          </tr>
          <tr>
            <td
              class="data-cells"
              title="AB1.23"
            >
              AB1.23
            </td>
            <td
              class=""
              title=""
            />
            <td
              class="data-cells"
              title="AC456.78"
            >
              AC456.78
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="data-cells"
              title="AD999.99"
            >
              AD999.99
            </td>
            <td
              class=""
              title=""
            />
            <td
              class="data-cells"
              title="AE987.65"
            >
              AE987.65
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  <div
    class="w-100 my-3 text-center"
  >
    <h3
      class="font-weight-bold"
    >
      Merkle Tree Visualization
    </h3>
    <div
      class="table-responsive"
    >
      <table
        aria-label="Preview Table"
        class="w-75 mx-auto my-1 text-center border table table-sm"
        role="grid"
      >
        <tbody
          role="presentation"
        >
          <tr>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class="root-cell"
              title="AC456.78"
            >
              AC456.78
            </td>
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
            <td
              class=""
              title=""
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
